--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,17 +2,17 @@
 
     <section class="mx-auto">
       <a href="/">Go back home</a>
-      <h1 class="title">Create your account!</h1>
+      <h1 class="title">Login your account!</h1>
       <form action="/login" method="post">
         <div>
-          <label for="username">Enter username</label>
-          <input type="text" id="username" name="username" />
+          <label for="email">Enter email</label>
+          <input type="email" id="email" name="email" />
         </div>
         <div>
             <label for="password">Enter password</label>
             <input type="password" id="password" name="password" />
         </div>
-        <button>Create Account</button>
+        <button>Login</button>
       </form>
     </section>
   </body>
