--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,11 +6,11 @@
       <form action="/login" method="post">
         <div>
           <label for="email">Enter email</label>
-          <input type="email" id="email" name="email" />
+          <input type="email" id="email" name="email" required />
         </div>
         <div>
             <label for="password">Enter password</label>
-            <input type="password" id="password" name="password" />
+            <input type="password" id="password" name="password" required />
         </div>
         <button>Login</button>
       </form>
