--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -6,15 +6,15 @@
       <form action="/register" method="post">
         <div>
           <label for="username">Enter username</label>
-          <input type="text" id="username" name="username" />
+          <input type="text" id="username" name="username" required />
         </div>
         <div>
             <label for="email">Enter email</label>
-            <input type="email" id="email" name="email" />
+            <input type="email" id="email" name="email" required />
         </div>
         <div>
             <label for="password">Enter password</label>
-            <input type="password" id="password" name="password" />
+            <input type="password" id="password" name="password" required />
         </div>
         <button>Register</button>
       </form>
