password reset still process

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -19,6 +19,7 @@
             <label for="password">Enter password</label>
             <input type="password" id="password" name="password" required />
         </div>
+        <a href="/reset-password">Forgot Password</a>
         <button>Login</button>
       </form>
     </section>
