--- a/views/auth/change-password.ejs
+++ b/views/auth/change-password.ejs
@@ -3,8 +3,10 @@
     <section class="mx-auto">
       <a href="/">Go back home</a>
       <h1 class="title">Change your password!</h1>
-      <form action="/reset-password" method="post">
+      <form action="/change-password" method="post">
       <input hidden value="<%= csrfToken %>" name="_csrf" />
+      <input hidden value="<%= resetToken%>" name="resetToken" />
+      <input hidden value="<%= user_id%>" name="user_id" />
         <div>
             <label for="password">Enter your new password</label>
             <input type="password" id="password" name="password" required />
