--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
 .title {
-  text-align: center;
 }
 .description {
   color: red;
@@ -24,26 +29,32 @@ textarea {
   font-size: 18px;
   padding: 4px 0;
   padding-left: 8px;
-  width: 100%;
+  width: 99%;
 }
 button {
   margin: 10px 0;
   color: #fff;
   background-color: #000;
-  padding: 8px 0;
+  padding: 8px 10px;
   width: 100%;
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
 }
 .mx-auto {
   width: 40%;
   margin: auto auto;
 }
-.post-box {
-  border: 1px solid black;
-  padding: 10px 20px;
-  margin-bottom: 20px;
+.post-container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  margin: 0 50px;
+  gap: 50px;
+  margin-top: 40px;
+}
+.post-box {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
 .post-title {
   font-size: 20px;
@@ -67,7 +78,7 @@ button {
   color: #fff;
   background-color: #000;
   padding: 8px 0;
-  width: 100%;
+  width: 60px;
   text-align: center;
 }
 .message-box {
@@ -83,4 +94,40 @@ button {
   text-align: center;
   padding: 15px 10px;
   font-weight: bold;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+.space-between {
+  justify-content: space-between;
+}
+.navbar {
+  background: rgb(17, 17, 105);
+}
+.gap-15 {
+  gap: 15px;
+}
+.p-50 {
+  padding: 0 50px;
+}
+.ml-auto {
+  margin-left: auto;
+}
+.f-end {
+  justify-content: flex-end;
+}
+.home-img {
+  width: 300px;
+  height: 150px;
+  object-fit: cover;
+}
+.text-white {
+  color: white;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.form div {
+  margin: 20px 0;
 }
