--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,12 +1,24 @@
 <%- include("./includes/head") %>
+<%- include("./includes/navbar") %>
+<div class="p-50">
+  <% if(post.userId.toString() == currentLoginUserId.toString()) { %>
+    <div class="flex f-end gap-15">
+      <div>
+        <a href="/admin/edit/<%= post._id %>" class="btn-full">Edit</a>
+      </div>
+    <div>
+      <form action="/admin/delete-post/<%= post._id %>" method="post">
+        <input hidden value="<%= csrfToken %>" name="_csrf" />
+          <button>Delete</button>
+      </form>
+    </div>
+    </div>
+    <% } %>
 <section class="details">
     <h1><%= post.title %></h1>
     <img src="<%= post.imgUrl %>" alt="<%= post.title %>">
     <p><%= post.description %></p>
-    <a href="/admin/edit/<%= post._id %>" class="btn-full">Edit</a>
-    <form action="/admin/delete-post/<%= post._id %>" method="post">
-      <input hidden value="<%= csrfToken %>" name="_csrf" />
-        <button>Delete</button>
-    </form>
+    
 </section>
+</div>
 <%- include("./includes/foot") %>
