--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -1,15 +1,18 @@
 <%- include("../includes/head") %>
-
+<%- include("../includes/navbar") %>
     <section class="mx-auto">
-      <a href="/">Go back home</a>
-      <h1 class="title">Reset your password!</h1>
+      <a href="/" class="ml-auto">Go back home</a>
+      <% if(errorMsg) { %>
+        <p class="message-box mt-20"><%= errorMsg %></p>
+      <% } %>
+      <h1 class="title mt-20">Reset your password!</h1>
       <form action="/reset-password" method="post">
       <input hidden value="<%= csrfToken %>" name="_csrf" />
-        <div>
+        <div class="mt-20">
           <label for="email">Enter email</label>
-          <input type="email" id="email" name="email" required />
+          <input type="text" id="email" name="email" value="<%= oldFormData.email %>" />
         </div>        
-        <button>Reset Password</button>
+        <button class="mt-20">Reset Password</button>
       </form>
     </section>
   </body>
