--- a/views/auth/change-password.ejs
+++ b/views/auth/change-password.ejs
@@ -1,21 +1,24 @@
 <%- include("../includes/head") %>
-
+<%- include("../includes/navbar") %>
     <section class="mx-auto">
-      <a href="/">Go back home</a>
+      <a href="/" class="ml-auto mt-20">Go back home</a>
+      <% if(errorMsg) { %>
+        <p class="message-box mt-20"><%= errorMsg %></p>
+      <% } %>
       <h1 class="title">Change your password!</h1>
       <form action="/change-password" method="post">
       <input hidden value="<%= csrfToken %>" name="_csrf" />
       <input hidden value="<%= resetToken%>" name="resetToken" />
       <input hidden value="<%= user_id%>" name="user_id" />
-        <div>
+        <div class="mt-20">
             <label for="password">Enter your new password</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" id="password" name="password" value="<%= oldFormData.password %>" />
         </div>        
-        <div>
+        <div class="mt-20">
             <label for="cpassword">Confirm your new password</label>
-            <input type="password" id="cpassword" name="cpassword" required />
+            <input type="password" id="cpassword" name="cpassword" value="<%= oldFormData.cpassword %>" />
         </div>        
-        <button>Change Password</button>
+        <button class="mt-20">Change Password</button>
       </form>
     </section>
   </body>
