--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,7 +1,7 @@
 <%- include("../includes/head") %>
-
+<%- include("../includes/navbar") %>
     <section class="mx-auto">
-      <a href="/">Go back home</a>
+      <a href="/" class="ml-auto">Go back home</a>
       <h1 class="title">Create your account!</h1>
       <form action="/register" method="post">
       <input hidden value="<%= csrfToken %>" name="_csrf" />
@@ -10,15 +10,15 @@
             <p class="message-box"><%= regError %></p>
           <% } %>
           <label for="username">Enter username</label>
-          <input type="text" id="username" name="username" required />
+          <input type="text" id="username" name="username" value="<%= oldFormData.username %>" />
         </div>
         <div>
             <label for="email">Enter email</label>
-            <input type="email" id="email" name="email" required />
+            <input type="text" id="email" name="email" value="<%= oldFormData.email %>" />
         </div>
         <div>
             <label for="password">Enter password</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" id="password" name="password" value="<%= oldFormData.password %>" />
         </div>
         <button>Register</button>
       </form>
