--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,8 @@
 <%- include("./includes/head") %>
 <div class="flex navbar space-between p-50">
-  <div>
-    <h1 class="title text-white"><a href="/" class="bg-none">My Blogs</a></h1>
+  <div class="flex">
+    <i class="fa-solid fa-blog text-white f-20"></i>
+    <h2 class="title text-white"><a href="/" class="bg-none">My Blogs</a></h2>
   </div>
     <% if(isLogin) { %>
   <div class="flex gap-15">
