--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,8 @@
 <div class="flex navbar space-between p-50">
-    <div>
-      <h1 class="text-white"><a href="/" class="bg-none">My Blogs</a></h1>
-    </div>
+  <div class="flex">
+    <i class="fa-solid fa-blog text-white f-20"></i>
+    <h2 class="title text-white"><a href="/" class="bg-none">My Blogs</a></h2>
+  </div>
       <% if(isLogin) { %>
     <div class="flex navbar-btn">
       <div>
