--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -16,7 +16,7 @@
             <label for="password">Enter password</label>
             <input type="password" id="password" name="password" value="<%= oldFormData.password %>" />
         </div>
-        <a href="/reset-password">Forgot Password</a>
+        <a href="/reset-password" class="mt-20">Forgot Password</a>
         <button>Login</button>
       </form>
     </section>
