--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -20,7 +20,7 @@
             <label for="password">Enter password</label>
             <input type="password" id="password" name="password" value="<%= oldFormData.password %>" />
         </div>
-        <button>Register</button>
+        <button class="mt-20">Register</button>
       </form>
     </section>
   </body>
