--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -1,8 +1,8 @@
 <%- include("./includes/head") %>
 <%- include("./includes/navbar") %>
     <section class="mx-auto mt-20 form">
-      <h1 class="title">Add a new post here!</h1>
-      <form action="/admin" method="post">
+      <h1 class="title mt-20">Add a new post here!</h1>
+      <form action="/admin" method="post" enctype="multipart/form-data">
       <input hidden value="<%= csrfToken %>" name="_csrf" />
         <div>
           <% if(errorMsg) { %>
@@ -13,7 +13,7 @@
         </div>
         <div>
           <label for="photo">Enter photo</label>
-          <input type="text" id="photo" name="photo" value="<%= oldFormData.photo %>" />
+          <input type="file" id="photo" name="photo" />
         </div>
         <div>
           <label for="description">Enter description</label>
