--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,8 +47,8 @@ button {
   display: flex;
   flex-wrap: wrap;
   margin: 0 100px;
-  margin-top: 10px;
-  gap: 80px;
+  margin-top: 50px;
+  justify-content: space-between;
 }
 .post-box {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -56,6 +56,7 @@ button {
   border-radius: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
+  width: 400px;
 }
 .post-title {
   font-size: 20px;
@@ -112,8 +113,8 @@ button {
   justify-content: flex-end;
 }
 .home-img {
-  width: 300px;
-  height: 150px;
+  width: 100%;
+  height: 250px;
   object-fit: cover;
 }
 .text-white {
@@ -172,4 +173,14 @@ a:hover, button:hover {
 }
 .ml-20 {
   margin-left: 35px;
+}
+.pagination {
+  display: flex;
+  padding: 50px 100px;
+  justify-content: center;
+  gap: 20px;
+  font-size: 15px;
+}
+.page-number {
+  margin-left: 10px;
 }
