--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -1,7 +1,7 @@
 <%- include("../includes/head") %>
 <%- include("../includes/navbar") %>
     <section class="mx-auto">
-      <a href="/" class="ml-auto">Go back home</a>
+      <a href="/" class="ml-auto mt-20">Go back home</a>
       <% if(errorMsg) { %>
         <p class="message-box mt-20"><%= errorMsg %></p>
       <% } %>
