--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,12 +1,12 @@
-<div class="flex navbar space-between p-50">
+<div class="flex navbar space-between p-300">
   <div class="flex">
     <i class="fa-solid fa-blog text-white f-20"></i>
-    <h2 class="title text-white"><a href="/" class="bg-none">My Blogs</a></h2>
+    <h1 class="title text-white logo"><a href="/" class="bg-none">My Blogs</a></h1>
   </div>
       <% if(isLogin) { %>
     <div class="flex navbar-btn">
       <div>
-        <a href="/" class="ml-auto">Go back home</a>
+        <!-- <a href="/" class="ml-auto">Go back home</a> -->
       </div>
     </div>
       <% } else { %>
