--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,17 +46,16 @@ button {
 .post-container {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 100px;
-  margin-top: 50px;
+  margin-top: 20px;
+  margin: 0 auto;
+  padding: 0 300px;
   justify-content: space-between;
 }
 .post-box {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 10px 20px;
   border-radius: 10px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  width: 400px;
+  width: 350px;
 }
 .post-title {
   font-size: 20px;
@@ -64,16 +63,36 @@ button {
   font-weight: 600;
 }
 .details h1{
-  text-align: center;
   margin: 20px 0;
+  font-size: 30px;
 }
 .details img{
-  width: 100%;
-  height: 30rem;
+  max-height: 800px;
   object-fit: cover;
+  object-position: center;
 }
-.details p{
+.flex-center {
+  justify-content: center;
+}
+.desc{
   font-size: 17px;
+  text-indent: 50px;
+}
+.ml-5 {
+  margin-left: 5px;
+}
+.download {
+  background: transparent;
+  color: rgb(28, 28, 88);
+}
+.download i {
+  font-size: 40px;
+}
+.download:hover {
+  background: transparent;
+}
+.download i:hover {
+  color: rgb(80, 80, 180);
 }
 .btn-full {
   margin: 10px 0;
@@ -103,7 +122,7 @@ button {
 .gap-15 {
   gap: 15px;
 }
-.p-50 {
+.p-300 {
   padding: 0 50px;
 }
 .ml-auto {
@@ -115,6 +134,7 @@ button {
 .home-img {
   width: 100%;
   height: 250px;
+  margin-top: 10px;
   object-fit: cover;
 }
 .text-white {
@@ -122,6 +142,9 @@ button {
 }
 .mt-20 {
   margin-top: 20px;
+}
+.mt-10 {
+  margin-top: 5px;
 }
 .form div {
   margin: 20px 0;
@@ -144,8 +167,8 @@ button {
 }
 .tmp {
   color: #000000;
-  font-weight: 300;
-  margin-left: 5px;
+  font-weight: 500;
+  margin-left: 10px;
 }
 .center {
   justify-content: center;
@@ -183,4 +206,30 @@ a:hover, button:hover {
 }
 .page-number {
   margin-left: 10px;
+}
+.p-300 {
+  padding: 0 300px;
+}
+.pt-40 {
+  padding-top: 40px;
+}
+.my-20 {
+  margin: 10px 0;
+}
+.link {
+  margin: 10px 0;
+  color: black;
+  background: transparent;
+  padding: 0px;
+  width: fit-content;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.link:hover {
+  background: #eeeeee;
+  transform: translateY(-5px);
+  transition: 0.2s;
+}
+.h-50px {
+  height: 120px;
 }
