--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,6 +1,6 @@
 <%- include("../includes/head") %>
 <%- include("../includes/navbar") %>
-    <section class="mx-auto">
+    <section class="mx-auto pt-40">
       <a href="/" class="ml-auto">Go back home</a>
       <h1 class="title">Create your account!</h1>
       <form action="/register" method="post">
