--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,6 +1,30 @@
 <%- include("./includes/head") %>
-<%- include("./includes/navbar") %>
-<div class="p-50">
+<div class="flex navbar space-between p-300">
+  <div class="flex">
+    <i class="fa-solid fa-blog text-white f-20"></i>
+    <h1 class="title text-white logo"><a href="/" class="bg-none">My Blogs</a></h1>
+  </div>
+    <% if(isLogin) { %>
+  <div class="flex gap-15">
+    <p class="text-white">Hello, <%= currentUser %></p>
+    <div>
+    <a href="/admin/create-post">Add a new post</a>
+  </div>
+    <div>
+    <form action="/logout" method="post">
+      <input hidden value="<%= csrfToken %>" name="_csrf" />
+      <button>Logout</button>
+    </form>
+    </div>
+  </div>
+    <% } else { %>
+  <div class="flex gap-15">
+    <a href="/login">Login existing account</a>
+    <a href="/register">Create new account</a>
+    <% } %>
+  </div>
+</div>
+<div class="p-300">
   <% if(post.userId._id.toString() == currentLoginUserId.toString()) { %>
     <div class="flex f-end gap-15">
       <div>
@@ -15,17 +39,25 @@
     </div>
     <% } %>
 <section class="details">
-  <div class="mt-20">
-    <p >Posted by <span class="tmp"><%= post.userId.email %></span></p>
-    <% if(date) { %>
-      <p>Uploaded at <span class="tmp"><%= date %></span></p>
-    <% } %>
-  </div>
-  <a href="/save/<%= post._id %>">Save to device</a>
+  <div class="mt-20 flex space-between">
     <h1><%= post.title %></h1>
-    <img src="<%= '/' + post.imgUrl %>" alt="<%= post.title %>">
-    <p class="mt-20"><%= post.description %></p>
-    
+    <div>
+      <a href="/" class="ml-auto">Go back home</a>
+    </div>
+  </div>
+  <div class="flex space-between">
+    <div>
+      <p ><i class="fa-solid fa-user"></i> <span class="tmp"><%= post.userId.email %></span></p>
+      <% if(date) { %>
+      <p class="mt-10"><i class="fa-regular fa-calendar-days"></i> <span class="tmp"><%= date %></span></p>
+      <% } %>
+    </div>
+    <a class="mt-20 download" href="/save/<%= post._id %>"><i class="fa-solid fa-file-arrow-down"></i></a>
+    </div>
+  <div class="flex flex-center">
+    <img src="<%= '/' + post.imgUrl %>" alt="<%= post.title %>" class="detail-img mt-20">
+  </div>
+    <p class="mt-20 desc"><%= post.description %></p>
 </section>
 </div>
 <%- include("./includes/foot") %>
