--- a/views/error/500.ejs
+++ b/views/error/500.ejs
@@ -3,7 +3,7 @@
 <div class="flex center fullheight">
     <div>
         <h1>Something went wrong!</h1>
-        <a href="/" class="go-home mx-auto>Go Home</a>
+        <a href="/" class="go-home mx-auto">Go Home</a>
     </div>
 </div>
 <%- include("../includes/foot") %>
