--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,16 +3,7 @@
     <i class="fa-solid fa-blog text-white f-20"></i>
     <h1 class="title text-white logo"><a href="/" class="bg-none">My Blogs</a></h1>
   </div>
-      <% if(isLogin) { %>
-    <div class="flex navbar-btn">
-      <div>
-        <!-- <a href="/" class="ml-auto">Go back home</a> -->
+        <a href="/" class="ml-auto">Go back home</a>
       </div>
-    </div>
-      <% } else { %>
-    <div class="flex gap-15">
-      <a href="/login">Login existing account</a>
-      <a href="/register">Create new account</a>
-      <% } %>
     </div>
   </div>
