--- a/views/user/public-profile.ejs
+++ b/views/user/public-profile.ejs
@@ -4,38 +4,19 @@
     <i class="fa-solid fa-blog text-white f-20"></i>
     <h1 class="title text-white logo"><a href="/" class="bg-none">My Blogs</a></h1>
   </div>
-  <div class="flex gap-15">
-    <p class="text-white">Hello, <%= currentUser.email %></p>
-    <div>
-    <a href="/admin/create-post">Add a new post</a>
-  </div>
-  </div>
 </div>
     <hr />
     <div class="p-300 mt-20">
       <a href="/" class="ml-auto">Go Back Home</a>
     </div>
-    <div class="p-300 flex space-between">
-      <div class="flex top">
-      <div class="center flex">
-          <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="profile" class="profile-lg">
-      </div>
-      <h1 class="ml-10"><%= currentUser.username %></h1>
-      </div>
-      <div class="flex gap-15">
-        <a href="/admin/edit-profile">Edit profile</a>
-        <a href="/admin/premium">Buy Premium</a>
-      </div>
-  </div>
-  <% if(postsArr.length === 0 && isLogin) { %>
-    <div class="flex center fullheight">
-      <div>
-        <h1>Nothing to see ?</h1>
-        <a href="/admin/create-post" class="ml-20 mt-20">Create a new post</a>
-      </div>
+    <div class="p-300 flex center">
+        <div>
+        <div class="center flex">
+            <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="profile" class="profile-lg">
+        </div>
+        <h2 class="text-center"><%= postsArr[0].userId.username %></h2>
+        </div>
     </div>
-    <% } %>
-    <% if(postsArr.length > 0 && isLogin) { %>
     <div class="post-container">
       <% for(let post of postsArr) { %>
       <a class="link" href="/post/<%= post._id %>">
@@ -61,14 +42,13 @@
     </div>
     <div class="pagination">
       <% if(hasPreviousPage) { %>
-      <a href="/admin/profile/user?page=<%= previousPage%>"
+      <a href="/profile/<%= postsArr[0].userId._id %>?page=<%= previousPage%>"
         >Previous Page <span class="page-number"><%= previousPage%></span></a
       >
       <% } %> <% if(hasNextPage) { %>
-      <a href="/admin/profile/user?page=<%= nextPage%>"
+      <a href="/profile/<%= postsArr[0].userId._id %>?page=<%= nextPage%>"
         >Next Page <span class="page-number"><%= nextPage%></span></a
       >
       <% } %>
     </div>
-    <% } %>
     <%- include("../includes/foot") %>
