--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,7 @@
   <% for(let post of postsArr) { %>
     <div class="post-box">
       <div class="flex">
-        <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="profile" class="profile-sm">
+        <img src="<%= post.userId.img ? '/' + post.userId.img : 'https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png' %>" alt="profile" class="profile-sm">
         <p class="mb-10"><a href="/profile/<%= post.userId._id %>" class="link"><%= post.userId.username %></a></p>
       </div>
       <div>
