--- a/views/user/premium.ejs
+++ b/views/user/premium.ejs
@@ -3,11 +3,12 @@
   <a href="/admin/profile/<%= user._id %>" class="ml-auto">Go back</a>
   <div class="premium-box">
     <form action="">
-      <h2>Get Premium</h2>
+      <h2>Premium User Only</h2>
       <ul>
         <li>Can save post as PDF</li>
         <li>Animate profile badge</li>
         <li>Can change profile unlimited</li>
+        <li>Upload user profile picture</li>
         <button>Get Now</button>
       </ul>
     </form>
