--- a/views/user/public-profile.ejs
+++ b/views/user/public-profile.ejs
@@ -12,7 +12,7 @@
     <div class="p-300 flex center">
         <div>
         <div class="center flex">
-            <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="profile" class="profile-lg">
+          <img src="<%= profileImg ? '/' + profileImg : 'https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png' %>" alt="profile" class="profile-lg">
         </div>
         <h2 class="text-center"><%= postsArr[0].userId.username %></h2>
         </div>
