--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,7 +56,7 @@ button {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 10px 20px;
   border-radius: 10px;
-  width: 300px;
+  width: 320px;
 }
 .post-title {
   font-size: 20px;
@@ -297,6 +297,12 @@ a:hover, button:hover {
 }
 
 @media screen and (min-width: 1400px) {
+  .premium-box {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1900px) {
   .p-300 {
     padding: 0 15%;
   }
